# Prook

./: README.md  config.json  run.bat  setup.py
Core/: __init__.py  analysis_engine.py  anti_ban.py  auto_assembler.py  config.py  constants.py  exceptions.py  hex_editor.py  hook_engine.py  il2cpp_analyzer.py  memory_patcher.py  memory_scanner.py  mod_injector.py  mod_menu_builder.py  security.py  signing.py  types.py
app/: Aaks  app_router.py  app_state.py  application.py  main.py
domain/: analysis_engine.py  crypto_engine.py  feature_engine.py  mod_engine.py  models.py  patch_engine.py  shield_engine.py
github/workflows/: build.yml
infrastructure/: audit.py  backup.py  crypto.py  file_system.py  logger.py  system.py
quantum_core/: ARCHITECTURE.md  README.md  build.sh  package.json
quantum_core/src/: app.js  index.html  styles.css
quantum_core/src-tauri/: Cargo.toml  tauri.conf.json
quantum_core/src-tauri/src/: analyzer.rs  cache.rs  database.rs  errors.rs  injector.rs  libraries.rs  logger.rs  main.rs  queue.rs  security.rs
resources/features/: features.json
resources/languages/: ar.json  en.json
scripts/: generate_signing_keys.py  sign_file.py  verify_signature.py
translations/: translator.py
ui/design_system/: colors.py  shadows.py  spacing.py  typography.py
ui/dialogs/: about_dialog.py  logs_dialog.py  settings_dialog.py
ui/screens/: analyzer_screen.py  editor_screen.py  home_screen.py  mods_screen.py  settings_screen.py  signing_screen.py
ui/theme/: auto_theme.py  dark_theme.py  light_theme.py  theme_manager.py
ui/widgets/: base.py  (+9 more)
(+1 files in other folders)
