[package]
name = "quantum_core"
version = "1.0.0"
edition = "2021"
authors = ["Quantum Team"]
description = "Ultimate Game Analysis & Modification Platform"

[lib]
name = "quantum_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
zip = "0.6"
hex = "0.4"
regex = "1.10"
sha2 = "0.10"
base64 = "0.21"
aes-gcm = "0.10"
